# pico-vad

pico_workspace/blink-led/: CMakeLists.txt
pico_workspace/hello_gpout/: CMakeLists.txt
pico_workspace/hello_world/usb/: CMakeLists.txt
pico_workspace/vasper_mic/: CMakeLists.txt  vasper_mic.c
